--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="no"> <!--no norwegian, en english-->
 
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"> <!--character set-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--responsive-->
         <title>Javascript</title>
+        <meta name="description" content="this page is not about javascript">  <!--google search description-->
+        <link rel="stylesheet" href="./css/style.css">
+        <script type="module" src="./js/app.js" async></script> <!--javascript-->
     </head>
     <body>
-        
+        <h1>Playground</h1>
     </body>
 
 </html>
+
